# Proiect2OOP

./: AnimatedSprite.cpp  AnimatedSprite.h  AnimatedSprite.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Delta.cpp  Delta.h  Delta.hpp  Delta.tpp  Enums.hpp  Exceptii.cpp  Exceptii.hpp  Functions.hpp  GamePanel.cpp  GamePanel.h  GamePanel.hpp  I_Sprite.h  I_Sprite.hpp  JumpSoundManager.cpp  JumpSoundManager.hpp  MovableSprite.cpp  MovableSprite.h  MovableSprite.hpp  Platform.cpp  Platform.hpp  Player.cpp  Player.h  Player.hpp  README.md  SoundManager.cpp  SoundManager.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  delta.cpp  delta.h  main.cpp  test.h
build-windows/: .config
build-windows/assets/map1/: map1.animated  map1.movable  map1.sprites  player.sprites
